Compiler/fasto/tests/scan_neg1.err
Type error: Scan: Argument not an array at line 4, column 11