Compiler/fasto/tests/scan_neg1.fo
fun int plus (int a, int b) = a + b

fun int main () = 
  let a = scan (plus, 0, 0) in 0